contact section mobile view fix

--- a/index.css
+++ b/index.css
@@ -469,11 +469,10 @@ span .nav-socials:hover {
 /* ---------- Contact ---------- */
 
 .contact-section {
-  margin: 0 auto;
   padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
   text-align: center;
   background: #e9ecef;
-  height: 270px;
 }
 
 .contact-socials {
@@ -492,6 +491,8 @@ span .nav-socials:hover {
   display: flex;
   align-items: center;
   color: #1d3557;
+  /* margin-bottom: 4rem; */
+  border: 1px solid red;
 }
 
 .contact-social:hover {
@@ -606,7 +607,7 @@ footer {
   background-color: #1d3557;
   color: white;
   text-align: center;
-  padding: 1rem;
+  /* padding: 1rem; */
   display: flex;
   align-items: center;
 }
@@ -765,6 +766,14 @@ footer .copywrite {
 
   .banner-img:focus .overlay {
     opacity: 1;
+  }
+
+  .contact-social a {
+    font-size: 1.8rem;
+  }
+
+  .contact-social i {
+    font-size: 2.8rem;
   }
 }
 
